# cpptok

./: .gitlab-ci.yml  CMakeLists.txt  README.md
include/cpptok/: cpptok-defs.h  token.h  tokenizer.h
src/: token.cpp  tokenizer.cpp
tests/: CMakeLists.txt  tests.cpp
